--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
-@import 'https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap';
-@import 'https://fonts.googleapis.com/css?family=Roboto+Mono';
+/*! Primitive
+  by Tania Rascia */
+
+
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap";
+@import "https://fonts.googleapis.com/css?family=Roboto+Mono";
 
 // Configuration
 @import 'base/variables';
