--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,8 @@
   by Tania Rascia */
 
 
-@import "https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap";
-@import "https://fonts.googleapis.com/css?family=Roboto+Mono";
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono);
 
 // Configuration
 @import 'base/variables';
