--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,7 @@
   by Tania Rascia */
 
 
-#import url(https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap);
-#import url(https://fonts.googleapis.com/css?family=Roboto+Mono);
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&family=Roboto+Mono&display=swap');
 
 // Configuration
 @import 'base/variables';
