Core Engine Edit

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
   by Tania Rascia */
 
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500,600,700&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght%40500;600;700&family=Roboto+Mono&display=swap');
 
 // Configuration
 @import 'base/variables';
