--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -46,14 +46,14 @@ $font-variant: normal;
 $font-weight: normal;
 $font-color: #454545;
 $light-font-color: rgba(0, 0, 0, 0.6);
-$font-family: Helvetica Neue, 'Inter', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+$font-family: Helvetica Neue, 'Montserrat', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
   sans-serif;
 $line-height: 1.6;
 
 // Headings
 $heading-font-color: #111;
 $heading-font-weight: 500;
-$heading-font-family: 'Inter', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+$heading-font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
   sans-serif;
 $heading-line-height: 1.3;
 
@@ -94,7 +94,7 @@ $button-background: $primary-color;
 $button-background-hover: darken($primary-color, 15%);
 $button-color: white;
 $button-font-weight: 500;
-$button-font-family: Helvetica Neue, 'Inter', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+$button-font-family: Helvetica Neue, 'Montserrat', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
   sans-serif;
 $button-font-size: 1.1rem;
 $button-border-width: 2px;
