Core Engine Edit

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -46,7 +46,7 @@ $font-variant: normal;
 $font-weight: normal;
 $font-color: #454545;
 $light-font-color: rgba(0, 0, 0, 0.6);
-$font-family: Helvetica Neue, 'Montserrat', -apple-system, BlinkMacSystemFont, Helvetica, Arial,
+$font-family: Helvetica Neue, -apple-system, BlinkMacSystemFont, Helvetica, Arial,
   sans-serif;
 $line-height: 1.6;
 
