--- a/src/styles/themes/404.scss
+++ b/src/styles/themes/404.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'PerfectDOS';
-  src: url('../fonts/PerfectDos.ttf') format('truetype');
+  src: url('../fonts/PerfectDos.woff2') format('woff2');
 }
 
 .not-found {
