--- a/src/styles/components/scaffolding.scss
+++ b/src/styles/components/scaffolding.scss
@@ -231,7 +231,7 @@ a {
     padding: 1px 2px;
     border-radius: 4px;
     &:hover {
-      color: $light-font-color;
+      color: $light-post-color;
     }
     &:active,
     &:focus {
