--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -67,8 +67,7 @@ $dark-primary: $tag;
       padding: 1px 2px;
 
       &:hover {
-        background: darken($dark-primary, 10%);
-        color: white;
+        color: darken($dark-primary, 10%);
         border-radius: 4px;
       }
 
