--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -857,7 +857,7 @@ blockquote {
   margin: 1.5rem;
 
   .note-container {
-    background: radial-gradient(circle at 20% 20%, #5183f5 25%, #4640ff 100%);
+    background: radial-gradient(circle at 20% 20%, #03A9F4 25%, #2196F3 100%);
     box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(100, 110, 140, 0.4);
     color: rgba(255, 255, 255, 0.9);
     border-radius: $border-radius;
