--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -3,6 +3,8 @@ $foreground: #b3b9c5;
 $accent: #303030;
 $dark-border: darken($background, 3%);
 $dark-primary: $tag;
+$comment:#ccc;
+
 
 .dark {
   background: $background;
