--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -5,6 +5,7 @@
   z-index: 3;
   width: 100%;
   background: white;
+  font-family: 'Montserrat';
 
   &.scroll {
     box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.1);
