--- a/src/styles/themes/404.scss
+++ b/src/styles/themes/404.scss
@@ -29,6 +29,7 @@
     margin-bottom: 40px;
   }
   p {
+    margin-top:3rem;
     font-size: 16px;
   }
   .list p:not(:last-of-type) {
@@ -45,6 +46,7 @@
     border-bottom: 2px solid #bbb;
     color: #000;
     height: 30px;
+    font-family: 'PerfectDOS', 'Courier New', monospace;
     .nav-container {
       padding: 0;
       height: 30px;
@@ -104,14 +106,14 @@
         .links,
         .brand {
           a {
-            font-size: 1rem;
+            font-size: 0.8rem;
             padding: 0 15px;
           }
         }
       }
     }
     p {
-      font-size: 1rem;
+      font-size: 0.8rem;
     }
     img {
       display: none;
