--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -78,8 +78,9 @@
 }
 
 .favicon {
-  height: 23px;
-  width: 23px;
+  height: 35px;
+  width: 35px;
+  border-radius: 35px;
   min-width: 23px;
   margin-right: 1rem;
   margin-bottom: 0;
